Johannes: Refactor